--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -24,8 +24,9 @@ body {
 }
 
 .container{
-  max-width: 375px;
+  width: 375px;
   margin: 0 auto;
+  border: 1px solid rgb(224, 34, 34);
   
 }
 button {
