--- a/scss/style.css
+++ b/scss/style.css
@@ -91,8 +91,9 @@ body {
 }
 
 .container {
-  max-width: 360px;
+  width: 375px;
   margin: 0 auto;
+  border: 1px solid #e02222;
 }
 
 button {
@@ -119,11 +120,14 @@ input {
   margin-bottom: 3px;
 }
 
-.top__inner {
+.top {
   background-image: url(../images/top-bg.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+}
+
+.top__inner {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -244,6 +248,10 @@ input {
   margin: 0 auto;
 }
 
+.soon {
+  background: #222222;
+}
+
 .soon__inner {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -255,7 +263,6 @@ input {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  background: #222222;
 }
 
 .soon__img {
@@ -319,7 +326,7 @@ input {
   margin-bottom: 95px;
 }
 
-.offers__inner {
+.offers {
   background: #222222;
 }
 
